// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPicker ui with addButton and search: Component: ModalPicker => ui with addButton and search 1`] = `
<Modal
  autoFocus={true}
  backdrop={true}
  backdropTransition={
    Object {
      "mountOnEnter": true,
      "timeout": 150,
    }
  }
  centered={false}
  container="body"
  fade={true}
  isOpen={true}
  keyboard={true}
  modalTransition={
    Object {
      "timeout": 300,
    }
  }
  onClosed={[Function]}
  onOpened={[Function]}
  returnFocusAfterClose={true}
  role="dialog"
  scrollable={false}
  toggle={[Function]}
  trapFocus={false}
  unmountOnClose={true}
  zIndex={1050}
>
  <ModalHeader
    closeAriaLabel="Close"
    tag="h5"
    toggle={[Function]}
    wrapTag="div"
  >
    Please select your favorite color
  </ModalHeader>
  <ModalBody
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
            "xxl",
          ]
        }
      >
        <SearchInput
          debounce={0}
          defaultValue=""
          onChange={[MockFunction]}
          placeholder="Search..."
        />
      </Col>
    </Row>
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
            "xxl",
          ]
        }
      >
        <h1>
          Children
        </h1>
      </Col>
    </Row>
  </ModalBody>
  <ModalFooter
    className="d-flex justify-content-center"
    tag="div"
  >
    <Pagination
      onChange={[Function]}
      page={
        Object {
          "content": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
            Object {
              "active": false,
              "email": "coordinator@42.nl",
              "firstName": "Cordelia",
              "id": 777,
              "lastName": "Coordinator",
              "roles": Array [
                "ADMIN",
                "USER",
              ],
            },
            Object {
              "active": false,
              "email": "user@42.nl",
              "firstName": "Ulysses",
              "id": 1337,
              "lastName": "User",
              "roles": Array [
                "USER",
              ],
            },
          ],
          "first": false,
          "last": false,
          "number": 2,
          "numberOfElements": 3,
          "size": 3,
          "totalElements": 9,
          "totalPages": 3,
        }
      }
    />
  </ModalFooter>
  <ModalFooter
    className="d-flex flex-row justify-content-between"
    tag="div"
  >
    <Button
      color="primary"
      onClick={[Function]}
      tag="button"
    >
      Add color
    </Button>
    <div>
      <Button
        className="ms-1"
        color="secondary"
        onClick={[Function]}
        tag="button"
      >
        Cancel
      </Button>
      <Button
        className="ms-1"
        color="primary"
        disabled={false}
        onClick={[Function]}
        tag="button"
      >
        Select
      </Button>
    </div>
  </ModalFooter>
</Modal>
`;

exports[`Component: ModalPicker ui without addButton and search: Component: ModalPicker => ui without addButton and search 1`] = `
<Modal
  autoFocus={true}
  backdrop={true}
  backdropTransition={
    Object {
      "mountOnEnter": true,
      "timeout": 150,
    }
  }
  centered={false}
  container="body"
  fade={true}
  isOpen={true}
  keyboard={true}
  modalTransition={
    Object {
      "timeout": 300,
    }
  }
  onClosed={[Function]}
  onOpened={[Function]}
  returnFocusAfterClose={true}
  role="dialog"
  scrollable={false}
  toggle={[Function]}
  trapFocus={false}
  unmountOnClose={true}
  zIndex={1050}
>
  <ModalHeader
    closeAriaLabel="Close"
    tag="h5"
    toggle={[Function]}
    wrapTag="div"
  >
    Please select your favorite color
  </ModalHeader>
  <ModalBody
    tag="div"
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
          "xxl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
            "xxl",
          ]
        }
      >
        <h1>
          Children
        </h1>
      </Col>
    </Row>
  </ModalBody>
  <ModalFooter
    className="d-flex justify-content-center"
    tag="div"
  >
    <Pagination
      onChange={[Function]}
      page={
        Object {
          "content": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "Addie",
              "id": 42,
              "lastName": "Admin",
              "roles": Array [
                "ADMIN",
              ],
            },
            Object {
              "active": false,
              "email": "coordinator@42.nl",
              "firstName": "Cordelia",
              "id": 777,
              "lastName": "Coordinator",
              "roles": Array [
                "ADMIN",
                "USER",
              ],
            },
            Object {
              "active": false,
              "email": "user@42.nl",
              "firstName": "Ulysses",
              "id": 1337,
              "lastName": "User",
              "roles": Array [
                "USER",
              ],
            },
          ],
          "first": false,
          "last": false,
          "number": 2,
          "numberOfElements": 3,
          "size": 3,
          "totalElements": 9,
          "totalPages": 3,
        }
      }
    />
  </ModalFooter>
  <ModalFooter
    className="d-flex flex-row justify-content-between"
    tag="div"
  >
    <div />
    <div>
      <Button
        className="ms-1"
        color="secondary"
        onClick={[Function]}
        tag="button"
      >
        Cancel
      </Button>
      <Button
        className="ms-1"
        color="primary"
        disabled={false}
        onClick={[Function]}
        tag="button"
      >
        Select
      </Button>
    </div>
  </ModalFooter>
</Modal>
`;
